2020-01-27  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox-local: Lock the mailbox in idle callbacks

	* libbalsa/mailbox_local.c (libbalsa_mailbox_local_finalize): no
	need to clear pointers and hendler ids in a finalize() method;
	(lbml_set_threading_idle_cb): lock and unlock the mailbox; no
	need to unref the mailbox; clear the handler id;
	(libbalsa_mailbox_local_set_threading): store the handler id,
	and do not ref the mailbox.

2020-01-27  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox: Lock the mailbox in idle callbacks

	* libbalsa/mailbox.c (lbm_msgno_filt_check_idle_cb),
	(lbm_set_threading_idle_cb):

2020-01-26  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox: Always use the idle callback to sort after changing the
	threading; save the handler id, to remove the source at finalize
	time instead of taking a ref on the mailbox.

	* libbalsa/mailbox.c (libbalsa_mailbox_finalize): remove the
	source, if the handler id has been stored and not cleared;
	(lbm_set_threading_idle_cb), (lbm_set_threading): clear and
	store, respectively, the handler id.

2020-01-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Header eye candy

	Albrecht's suggestion!

	* src/balsa-mime-widget-message.c (add_header_gchar): improve
	xalign property of header value labels.

2020-01-23  Albrecht Dreß  <albrecht.dress@arcor.de>

	Crypto eye candies

	* libbalsa/libbalsa-gpgme-widgets.c: improve xalign and yalign properties
	  of labels in signature and key details widgets
	* src/balsa-mime-widget-crypto.c: balsa_mime_widget_signature_widget:
	  wrap/align signature status in expander label;
	  balsa_mime_widget_crypto_frame: add tooltips to padlock icons
	* src/balsa-mime-widget-message.c: add_header_sigstate:
	  wrap/align signature status in headers box

2020-01-23  Albrecht Dreß  <albrecht.dress@arcor.de>

	Bug fix: S/MIME cert chain broken in identity key selection

	* libbalsa/libbalsa-gpgme-widgets.c: libbalsa_gpgme_key(): fall back